// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a function 1`] = `
{
  ".wing/my_function_c85c4e0e.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(event) {
  event = JSON.parse(event);
  let msg;
  if (event.name[0] !== event.name[0].toUpperCase()) {
    throw new Error(\\"Name must start with uppercase letter\\");
  }
  if (process.env.PIG_LATIN) {
    msg = \\"Ellohay, \\" + event.name + \\"!\\";
  } else {
    msg = \\"Hello, \\" + event.name + \\"!\\";
  }
  return JSON.stringify({ msg });
}
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_function",
        "props": {
          "environmentVariables": {
            "ENV_VAR1": "true",
          },
          "sourceCodeFile": ".wing/my_function_c85c4e0e.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_function": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function fails 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Invoke (payload=\\"{\\\\\\"name\\\\\\":\\\\\\"alice\\\\\\"}\\").",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`invoke function fails 2`] = `
{
  ".wing/my_function_c85c4e0e.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(event) {
  event = JSON.parse(event);
  let msg;
  if (event.name[0] !== event.name[0].toUpperCase()) {
    throw new Error(\\"Name must start with uppercase letter\\");
  }
  if (process.env.PIG_LATIN) {
    msg = \\"Ellohay, \\" + event.name + \\"!\\";
  } else {
    msg = \\"Hello, \\" + event.name + \\"!\\";
  }
  return JSON.stringify({ msg });
}
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_function",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/my_function_c85c4e0e.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_function": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function succeeds 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Invoke (payload=\\"{\\\\\\"name\\\\\\":\\\\\\"Alice\\\\\\"}\\").",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`invoke function succeeds 2`] = `
{
  ".wing/my_function_c85c4e0e.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(event) {
  event = JSON.parse(event);
  let msg;
  if (event.name[0] !== event.name[0].toUpperCase()) {
    throw new Error(\\"Name must start with uppercase letter\\");
  }
  if (process.env.PIG_LATIN) {
    msg = \\"Ellohay, \\" + event.name + \\"!\\";
  } else {
    msg = \\"Hello, \\" + event.name + \\"!\\";
  }
  return JSON.stringify({ msg });
}
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_function",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/my_function_c85c4e0e.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_function": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function with environment variables 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Invoke (payload=\\"{\\\\\\"name\\\\\\":\\\\\\"Alice\\\\\\"}\\").",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`invoke function with environment variables 2`] = `
{
  ".wing/my_function_c85c4e0e.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(event) {
  event = JSON.parse(event);
  let msg;
  if (event.name[0] !== event.name[0].toUpperCase()) {
    throw new Error(\\"Name must start with uppercase letter\\");
  }
  if (process.env.PIG_LATIN) {
    msg = \\"Ellohay, \\" + event.name + \\"!\\";
  } else {
    msg = \\"Hello, \\" + event.name + \\"!\\";
  }
  return JSON.stringify({ msg });
}
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_function",
        "props": {
          "environmentVariables": {
            "PIG_LATIN": "true",
          },
          "sourceCodeFile": ".wing/my_function_c85c4e0e.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_function": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`invoke function with process.exit(1) 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Invoke (payload=\\"{}\\").",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`invoke function with process.exit(1) 2`] = `
{
  ".wing/my_function_c85c4e0e.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle() {
  process.exit(1);
}
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_function",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/my_function_c85c4e0e.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_function": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": {
            "description": "A cloud function (FaaS)",
            "title": "Function",
          },
          "id": "my_function",
          "path": "root/my_function",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
